--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Portofolio</title>
 
     <link rel="stylesheet" href="./assets/css/aos.css" />
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
@@ -86,6 +86,8 @@
               </p>
               <div data-aos="fade-up" data-aos-delay="600">
                 <a href="#work" class="btn btn-brand me-4">Explore my Work</a>
+              </div>
+              <div data-aos="fade-up" data-aos-delay="600">
                 <a
                   href="https://api.whatsapp.com/send/?phone=6289653430061&text&type=phone_number&app_absent=0"
                   target="_blank"
