--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               <div data-aos="fade-up" data-aos-delay="600">
                 <a href="#work" class="btn btn-brand me-4">Explore my Work</a>
               </div>
-              <div data-aos="fade-up" data-aos-delay="600">
+              <div class="pt-3" data-aos="fade-up" data-aos-delay="600">
                 <a
                   href="https://api.whatsapp.com/send/?phone=6289653430061&text&type=phone_number&app_absent=0"
                   target="_blank"
