--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
               <a class="nav-link" href="#reviews">Reviews</a>
               </li> 
             -->
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="#blog">Blog</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
             </li>
@@ -73,9 +73,12 @@
           <div class="row">
             <div class="col-lg-10">
               <div class="run-icon">
-                <i class="lab la-figma"></i> <i class="lab la-html5"></i>
+                <i class="lab la-figma"></i>
+                <i class="lab la-html5"></i>
                 <i class="lab la-css3-alt"></i>
-                <i class="lab la-js-square"></i> <i class="lab la-react"></i>
+                <i class="lab la-js-square"></i>
+                <i class="lab la-react"></i>
+                <i class="lab la-wordpress-simple"></i>
               </div>
               <h1 class="display-4 fw-bold" data-aos="fade-up">
                 I Am <span class="input text-brand"></span>
@@ -354,7 +357,7 @@
      -->
 
       <!-- blog -->
-      <section id="blog" class="full-height px-lg-5">
+      <!-- <section id="blog" class="full-height px-lg-5">
         <div class="container">
           <div class="row pb-4" data-aos="fade-up">
             <div class="col-lg-8">
@@ -414,7 +417,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!-- contact -->
       <section id="contact" class="full-height px-lg-5">
@@ -427,7 +430,6 @@
               <h6 class="text-brand">Contact</h6>
               <h1>Interested in working together?</h1>
             </div>
-
             <div class="col-llg-8" data-aos="fade-up" data-aos-delay="300">
               <form action="#" class="row g-lg-3 gy-3">
                 <div
@@ -436,6 +438,7 @@
                   data-aos-delay="400"
                 >
                   <input
+                    id="name"
                     type="text"
                     class="form-control"
                     placeholder="Enter your name"
@@ -447,6 +450,7 @@
                   data-aos-delay="400"
                 >
                   <input
+                    id="email"
                     type="text"
                     class="form-control"
                     placeholder="Enter your email"
@@ -458,6 +462,7 @@
                   data-aos-delay="500"
                 >
                   <input
+                    id="subject"
                     type="text"
                     class="form-control"
                     placeholder="Enter your subject"
@@ -470,7 +475,7 @@
                 >
                   <textarea
                     name=""
-                    id=""
+                    id="message"
                     rows="4"
                     class="form-control"
                     placeholder="Enter your message"
@@ -481,7 +486,11 @@
                   data-aos="fade-up"
                   data-aos-delay="700"
                 >
-                  <button type="submit" class="btn btn-brand">
+                  <button
+                    type="button"
+                    onclick="contact()"
+                    class="btn btn-brand"
+                  >
                     Contact Me
                   </button>
                 </div>
